--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*CSS for Alert Messages Index*/
-
+/*Import Ionic Framework */
 @import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
 
 body {
